<package format="2">
  <name>libkindrv</name>
  <version>1.2.4</version>
  <description>
    libkindrv
  </description>
  <maintainer email="cdellin@gmail.com">Chris Dellin</maintainer>
  <license>None</license>
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
